--- a/index.html
+++ b/index.html
@@ -264,7 +264,93 @@
         </div>
     </section>
     <section class="depoimentos" id="depoimentos">
-        
+        <div class="background-depoimentos"></div>
+        <div class="container">
+            <div class="row">
+                <div class="col-5 text-center">
+                    <div class="card-depoimentos"></div>
+                    <div class="d-flex img-banner">
+                        <img src="img/pizzas.png"/>
+                    </div>
+                </div>
+                <div class="col-7">
+                    <span class="hint-title"><b>Depoimentos</b></span>
+                    <h1 class="tilte">
+                        <b>O que dizem sobre nós?</b>
+                    </h1>
+                    <div class="mb-5">
+
+                        <div class="depoimento" id="depoimento-1">
+                            <div class="container-dados-depoimento">
+                                <div class="imagem-depoimento"></div>
+                                <div>
+                                    <p class="nome-depoimento"><b>Diego Pereira</b></p>
+                                    <p class="nota-depoimento">
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star-half-alt"></i>&nbsp;<span>4.5</span>
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="texto-depoimento"> 
+                                <i class="fas fa-quote-left"></i>
+                                Muito bom, recomendo de mais! Comida muito bem feita pelo chefe, 
+                                atentimento dentro dos parâmetros e bom comunicação com o cliente.
+                                <i class="fas fa-quote-right"></i>
+                            </div>
+                        </div>
+                        <div class="depoimento hidden" id="depoimento-2">
+                            <div class="container-dados-depoimento">
+                                <div class="imagem-depoimento"></div>
+                                <div>
+                                    <p class="nome-depoimento"><b>Ana Beatriz</b></p>
+                                    <p class="nota-depoimento">
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>&nbsp;<span>5.0</span>
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="texto-depoimento"> 
+                                <i class="fas fa-quote-left"></i>
+                                Um jantar perfeito do começo ao fim. Comida, experiência, serviços...
+                                Foi tão maravilhoso que fomos dois dias seguidos - fato inédito para mim em uma viagem.
+                                <i class="fas fa-quote-right"></i>
+                            </div>
+                        </div>
+                        <div class="depoimento hidden" id="depoimento-3">
+                            <div class="container-dados-depoimento">
+                                <div class="imagem-depoimento"></div>
+                                <div>
+                                    <p class="nome-depoimento"><b>João Guilherme</b></p>
+                                    <p class="nota-depoimento">
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="far fa-star"></i>&nbsp;<span>4.0</span>
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="texto-depoimento"> 
+                                <i class="fas fa-quote-left"></i>
+                                A comida estava excelente e o serviço nos surpreendeu.
+                                Dica: reserve umas três horas para ter uma experiência incrível.
+                                <i class="fas fa-quote-right"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <a class="btn btn-sm btn-white btn-social mr-3 active">1</a>
+                    <a class="btn btn-sm btn-white btn-social mr-3">2</a>
+                    <a class="btn btn-sm btn-white btn-social">3</a>
+                </div>
+            </div>
+
+        </div>
     </section>
     <section class="reserva" id="reservas">
         
