--- a/index.html
+++ b/index.html
@@ -353,7 +353,36 @@
         </div>
     </section>
     <section class="reserva" id="reservas">
-        
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <div class="card-secundary">
+                        <div class="row">
+                            <div class="col-7">
+                                    <span class="hint-title"><b>Reserva</b></span>
+                                    <h1 class="tilte">
+                                        <b>Quer reservar um horário?</b>
+                                    </h1>
+                                    <p class="pr-5">Mande uma mensagem clicando noi botão abaixo.
+                                        <br>
+                                        Reserve sua data e horário de forma simples e rápida.
+                                    </p>
+                                    <a class="btn btn-yellow mt-4">Fazer Reserva</a>
+                            </div>
+                            <div class="col-5">
+                                <div class="card-reserva">
+                                    <div class="d-flex img-banner">
+                                        <img src="img/icone-reserva.svg"/>
+                                    </div>
+                                </div>
+
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>      
     </section>
 
     <footer>
