--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
                             <a href="#reservas" class="nav-link"><b>Reservas</b></a>
                         </li>
                         <li class="nav-item">
-                            <a href="#reservas" class="nav-link"><b>Serviços</b></a>
+                            <a href="#servicos" class="nav-link"><b>Serviços</b></a>
                         </li>
                         <li class="nav-item">
-                            <a href="#reservas" class="nav-link"><b>Cardápio</b></a>
+                            <a href="#cardapio" class="nav-link"><b>Cardápio</b></a>
                         </li>
                         <li class="nav-item">
-                            <a href="#reservas" class="nav-link"><b>Depoimentos</b></a>
+                            <a href="#depoimentos" class="nav-link"><b>Depoimentos</b></a>
                         </li>
                     </ul>
                     <a class="btn btn-white btn-icon"> Meu carrinho 
@@ -47,7 +47,6 @@
             </nav>
         </div>
     </section>
-    
     <section class="banner">
         <div class="container">
             <div class="row">
@@ -384,9 +383,32 @@
             </div>
         </div>      
     </section>
-
     <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-3 container-logo-footer">
+                    <img class="logo-footer" src="img/logo.png" />
+                </div>
+                <div class="col-6 container-texto-footer">
+                    <p class="mb-0">
+                        <b>Menu On-line</b> &copy; Todos os direitos reservados.
+                    </p>
+                </div>
+                <div class="col-3 container-redes-footer">
+                    <a class="btn btn-sm btn-white btn-social mr-3">
+                        <i class="fab fa-instagram"></i>
+                    </a>
+                    <a class="btn btn-sm btn-white btn-social mr-3">
+                        <i class="fab fa-facebook-f"></i>
+                    </a>
+                    <a class="btn btn-sm btn-white btn-social">
+                        <i class="fab fa-whatsapp"></i>
+                    </a>
+                </div>
 
+            </div>
+
+        </div>
     </footer>
 
     <script type="text/javascript" src="js/jquery-1.12.4.min.js"></script>
